--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -25,12 +25,13 @@
     "\n",
     "Within this markdown cell, copy the line of text you used to import the data from your Terminal. This way, future analysts will be able to repeat your process.\n",
     "\n",
-    "e.g.: Import the dataset with `YOUR IMPORT TEXT HERE`"
+    "e.g.: Import the dataset with `mongoimport --type json -d uk_food -c establishments --drop --jsonArray --file establishments.json\r\n",
+    "`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,17 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "7f9ececa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['admin', 'autosaurus', 'classDB', 'config', 'fruits_db', 'local', 'met', 'travel_db', 'uk_food']\n"
+     ]
+    }
+   ],
    "source": [
-    "# confirm that our new database was created\n"
+    "# confirm that our new database was created\n",
+    "print(mongo.list_database_names()) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -74,37 +84,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "ef1b89ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['establishments']"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "db.list_collection_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18ab463c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# review the collections in our new database\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "6a0d92df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'The Bay',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'The Coastguard Inn',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4587.347174863443,\n",
+      " 'FHRSID': 1034540,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT15 6DY',\n",
+      " 'RatingDate': '2022-08-17T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('65f61257e5e952935a713f74'),\n",
+      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# review a document in the establishments collection\n"
+    "# review a document in the establishments collection\n",
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -131,32 +187,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Create a dictionary for the new restaurant data\n",
+    "new_restaurant = {\n",
+    "    \"BusinessName\": \"Penang Flavours\",\n",
+    "    \"BusinessType\": \"\",\n",
+    "    \"AddressLine3\": \"Greenwich\",\n",
+    "    \"RatingValue\": None,\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x179f2bd2940>"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Insert the new restaurant into the collection\n",
+    "db.establishments.insert_one(new_restaurant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "63bb10f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('65f6126f7a2f8bfa3bd0d79d'),\n",
+       " 'BusinessName': 'Penang Flavours',\n",
+       " 'BusinessType': '',\n",
+       " 'AddressLine3': 'Greenwich',\n",
+       " 'RatingValue': None}"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Check that the new restaurant was inserted\n",
+    "newly_inserted_restaurant = db.establishments.find_one({\"BusinessName\": \"Penang Flavours\"})\n",
+    "newly_inserted_restaurant"
    ]
   },
   {
@@ -169,12 +260,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "restaurant_type_info = db.establishments.find_one({\"BusinessType\": \"Restaurant/Cafe/Canteen\"},\n",
+    "                                                  {\"BusinessTypeID\": 1, \"BusinessType\": 1, \"_id\": 0})\n",
+    "\n",
+    "# Print the result\n",
+    "pprint(restaurant_type_info)"
    ]
   },
   {
@@ -187,22 +291,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "7f599f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x179f2bd2100>"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Update the new restaurant with the correct BusinessTypeID\n"
+    "# Update the new restaurant with the correct BusinessTypeID\n",
+    "penang_flavours = db.establishments.find_one({\"BusinessName\": \"Penang Flavours\"})\n",
+    "\n",
+    "# Get the BusinessTypeID for \"Restaurant/Cafe/Canteen\" from the previous query\n",
+    "restaurant_type_info = db.establishments.find_one({\"BusinessType\": \"Restaurant/Cafe/Canteen\"})\n",
+    "business_type_id = restaurant_type_info[\"BusinessTypeID\"]\n",
+    "\n",
+    "# Update the BusinessTypeID for \"Penang Flavours\"\n",
+    "db.establishments.update_one({\"BusinessName\": \"Penang Flavours\"},\n",
+    "                             {\"$set\": {\"BusinessTypeID\": business_type_id}})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('65f6126f7a2f8bfa3bd0d79d'),\n",
+       " 'BusinessName': 'Penang Flavours',\n",
+       " 'BusinessType': '',\n",
+       " 'AddressLine3': 'Greenwich',\n",
+       " 'RatingValue': None,\n",
+       " 'BusinessTypeID': 1}"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirm that the new restaurant was updated\n",
+    "updated_penang_flavours = db.establishments.find_one({\"BusinessName\": \"Penang Flavours\"})\n",
+    "updated_penang_flavours"
    ]
   },
   {
@@ -215,42 +357,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "768474a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "994"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "dover_count_before = db.establishments.count_documents({\"LocalAuthorityName\": \"Dover\"})\n",
+    "dover_count_before"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "a11d5f1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x179f2b96a00>"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
+    "db.establishments.delete_many({\"LocalAuthorityName\": \"Dover\"})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "2a51aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "dover_count_after = db.establishments.count_documents({\"LocalAuthorityName\": \"Dover\"})\n",
+    "dover_count_after"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "8c356f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('65f61257e5e952935a71425a'),\n",
+       " 'FHRSID': 1043695,\n",
+       " 'ChangesByServerID': 0,\n",
+       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+       " 'BusinessName': 'The Pavilion',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'East Cliff Pavilion',\n",
+       " 'AddressLine2': 'Wear Bay Road',\n",
+       " 'AddressLine3': 'Folkestone',\n",
+       " 'AddressLine4': 'Kent',\n",
+       " 'PostCode': 'CT19 6BL',\n",
+       " 'Phone': '',\n",
+       " 'RatingValue': '5',\n",
+       " 'RatingKey': 'fhrs_5_en-gb',\n",
+       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'LocalAuthorityCode': '188',\n",
+       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': '1.195625', 'latitude': '51.083812'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4591.765489457773,\n",
+       " 'NewRatingPending': False,\n",
+       " 'meta': {'dataSource': None,\n",
+       "  'extractDate': '0001-01-01T00:00:00',\n",
+       "  'itemCount': 0,\n",
+       "  'returncode': None,\n",
+       "  'totalCount': 0,\n",
+       "  'totalPages': 0,\n",
+       "  'pageSize': 0,\n",
+       "  'pageNumber': 0},\n",
+       " 'links': [{'rel': 'self',\n",
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "remaining_document = db.establishments.find_one()\n",
+    "remaining_document"
    ]
   },
   {
@@ -273,12 +501,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of documents updated: 38785\n"
+     ]
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "update_result = db.establishments.update_many(\n",
+    "    {\n",
+    "        \"geocode.latitude\": {\"$type\": \"string\"},\n",
+    "        \"geocode.longitude\": {\"$type\": \"string\"}\n",
+    "    },\n",
+    "    [\n",
+    "        {\"$set\": {\n",
+    "            \"geocode.latitude\": {\"$toDouble\": \"$geocode.latitude\"},\n",
+    "            \"geocode.longitude\": {\"$toDouble\": \"$geocode.longitude\"}\n",
+    "        }}\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Print the number of documents updated\n",
+    "print(f\"Number of documents updated: {update_result.modified_count}\")\n"
    ]
   },
   {
@@ -292,10 +543,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x179f2bc49c0>"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -304,23 +566,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of documents updated: 34694\n"
+     ]
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "update_result = db.establishments.update_many(\n",
+    "    {\"RatingValue\": {\"$type\": \"string\"}},  # Filter documents where RatingValue is a string\n",
+    "    [{\"$set\": {\"RatingValue\": {\"$toInt\": \"$RatingValue\"}}}]  # Convert string RatingValue to integer\n",
+    ")\n",
+    "\n",
+    "# Print the number of documents updated\n",
+    "print(f\"Number of documents updated: {update_result.modified_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "0deacaf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('65f61257e5e952935a71425a'),\n",
+       " 'FHRSID': 1043695,\n",
+       " 'ChangesByServerID': 0,\n",
+       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+       " 'BusinessName': 'The Pavilion',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'East Cliff Pavilion',\n",
+       " 'AddressLine2': 'Wear Bay Road',\n",
+       " 'AddressLine3': 'Folkestone',\n",
+       " 'AddressLine4': 'Kent',\n",
+       " 'PostCode': 'CT19 6BL',\n",
+       " 'Phone': '',\n",
+       " 'RatingValue': 5,\n",
+       " 'RatingKey': 'fhrs_5_en-gb',\n",
+       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'LocalAuthorityCode': '188',\n",
+       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4591.765489457773,\n",
+       " 'NewRatingPending': False,\n",
+       " 'meta': {'dataSource': None,\n",
+       "  'extractDate': '0001-01-01T00:00:00',\n",
+       "  'itemCount': 0,\n",
+       "  'returncode': None,\n",
+       "  'totalCount': 0,\n",
+       "  'totalPages': 0,\n",
+       "  'pageSize': 0,\n",
+       "  'pageNumber': 0},\n",
+       " 'links': [{'rel': 'self',\n",
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check that the coordinates and rating value are now numbers\n",
+    "check_sample = db.establishments.find_one()\n",
+    "check_sample"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0deacaf9",
+   "id": "4f239539-778f-4ec9-9517-792d472f766f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -339,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
