--- a/NoSQL_setup.ipynb
+++ b/NoSQL_setup.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 155,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 156,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 157,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 158,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 159,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "['establishments']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 160,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -114,32 +114,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'The Bay',\n",
-      " 'AddressLine2': 'St Margarets Bay',\n",
-      " 'AddressLine3': 'Kent',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'The Coastguard Inn',\n",
-      " 'BusinessType': 'Pub/bar/nightclub',\n",
-      " 'BusinessTypeID': 7843,\n",
+      "{'AddressLine1': 'West Cottage',\n",
+      " 'AddressLine2': 'South Foreland Lighthouse',\n",
+      " 'AddressLine3': 'The Front',\n",
+      " 'AddressLine4': 'St Margarets Bay',\n",
+      " 'BusinessName': 'Mrs Knotts Tea Room',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.347174863443,\n",
-      " 'FHRSID': 1034540,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
+      " 'Distance': 4587.492467848017,\n",
+      " 'FHRSID': 429991,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000055200',\n",
       " 'LocalAuthorityCode': '182',\n",
       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
       " 'LocalAuthorityName': 'Dover',\n",
       " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DY',\n",
-      " 'RatingDate': '2022-08-17T00:00:00',\n",
+      " 'PostCode': 'CT15 6HP',\n",
+      " 'RatingDate': '2019-05-02T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('65f61257e5e952935a713f74'),\n",
-      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
+      " '_id': ObjectId('65f62959ee8fa7e7b923010c'),\n",
+      " 'geocode': {'latitude': '51.14061', 'longitude': '1.371894'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/429991',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -149,7 +149,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 161,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -187,67 +187,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 162,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a dictionary for the new restaurant data\n",
     "new_restaurant = {\n",
-    "    \"BusinessName\": \"Penang Flavours\",\n",
-    "    \"BusinessType\": \"\",\n",
-    "    \"AddressLine3\": \"Greenwich\",\n",
-    "    \"RatingValue\": None,\n",
-    "}\n"
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 163,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x179f2bd2940>"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Insert the new restaurant into the collection\n",
-    "db.establishments.insert_one(new_restaurant)"
+    "insert_result = establishments.insert_one(new_restaurant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 164,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('65f6126f7a2f8bfa3bd0d79d'),\n",
+       "{'_id': ObjectId('65f6296d7a2f8bfa3bd0d7a4'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
-       " 'BusinessType': '',\n",
-       " 'AddressLine3': 'Greenwich',\n",
-       " 'RatingValue': None}"
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': '',\n",
+       " 'AddressLine1': 'Penang Flavours',\n",
+       " 'AddressLine2': '146A Plumstead Rd',\n",
+       " 'AddressLine3': 'London',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'SE18 7DY',\n",
+       " 'Phone': '',\n",
+       " 'LocalAuthorityCode': '511',\n",
+       " 'LocalAuthorityName': 'Greenwich',\n",
+       " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+       " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4623.972328074718,\n",
+       " 'NewRatingPending': True}"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check that the new restaurant was inserted\n",
-    "newly_inserted_restaurant = db.establishments.find_one({\"BusinessName\": \"Penang Flavours\"})\n",
-    "newly_inserted_restaurant"
+    "inserted_restaurant = establishments.find_one({\"BusinessName\": \"Penang Flavours\"})\n",
+    "\n",
+    "inserted_restaurant"
    ]
   },
   {
@@ -260,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 165,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -291,17 +318,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 166,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x179f2bd2100>"
+       "<pymongo.results.UpdateResult at 0x179f2abd500>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,22 +348,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 167,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('65f6126f7a2f8bfa3bd0d79d'),\n",
+       "{'_id': ObjectId('65f6296d7a2f8bfa3bd0d7a4'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
-       " 'BusinessType': '',\n",
-       " 'AddressLine3': 'Greenwich',\n",
-       " 'RatingValue': None,\n",
-       " 'BusinessTypeID': 1}"
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'Penang Flavours',\n",
+       " 'AddressLine2': '146A Plumstead Rd',\n",
+       " 'AddressLine3': 'London',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'SE18 7DY',\n",
+       " 'Phone': '',\n",
+       " 'LocalAuthorityCode': '511',\n",
+       " 'LocalAuthorityName': 'Greenwich',\n",
+       " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+       " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4623.972328074718,\n",
+       " 'NewRatingPending': True}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 168,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -367,7 +408,7 @@
        "994"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,17 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 169,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x179f2b96a00>"
+       "<pymongo.results.DeleteResult at 0x179f2aa33c0>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 170,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -412,7 +453,7 @@
        "0"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,38 +466,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 171,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('65f61257e5e952935a71425a'),\n",
-       " 'FHRSID': 1043695,\n",
+       "{'_id': ObjectId('65f62959ee8fa7e7b92303f3'),\n",
+       " 'FHRSID': 647177,\n",
        " 'ChangesByServerID': 0,\n",
-       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
-       " 'BusinessName': 'The Pavilion',\n",
-       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-       " 'BusinessTypeID': 1,\n",
-       " 'AddressLine1': 'East Cliff Pavilion',\n",
-       " 'AddressLine2': 'Wear Bay Road',\n",
-       " 'AddressLine3': 'Folkestone',\n",
-       " 'AddressLine4': 'Kent',\n",
-       " 'PostCode': 'CT19 6BL',\n",
+       " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
+       " 'BusinessName': 'Wear Bay Bowls Club',\n",
+       " 'BusinessType': 'Pub/bar/nightclub',\n",
+       " 'BusinessTypeID': 7843,\n",
+       " 'AddressLine1': 'Wear Bay Road',\n",
+       " 'AddressLine2': 'Folkestone',\n",
+       " 'AddressLine3': 'Kent',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'CT19 6PY',\n",
        " 'Phone': '',\n",
-       " 'RatingValue': '5',\n",
-       " 'RatingKey': 'fhrs_5_en-gb',\n",
-       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'RatingValue': '4',\n",
+       " 'RatingKey': 'fhrs_4_en-gb',\n",
+       " 'RatingDate': '2014-03-31T00:00:00',\n",
        " 'LocalAuthorityCode': '188',\n",
        " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
        " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
        " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 10},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': '1.195625', 'latitude': '51.083812'},\n",
+       " 'geocode': {'longitude': '1.196408', 'latitude': '51.086058'},\n",
        " 'RightToReply': '',\n",
-       " 'Distance': 4591.765489457773,\n",
+       " 'Distance': 4591.821311183521,\n",
        " 'NewRatingPending': False,\n",
        " 'meta': {'dataSource': None,\n",
        "  'extractDate': '0001-01-01T00:00:00',\n",
@@ -467,10 +508,10 @@
        "  'pageSize': 0,\n",
        "  'pageNumber': 0},\n",
        " 'links': [{'rel': 'self',\n",
-       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/647177'}]}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 172,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
@@ -509,7 +550,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of documents updated: 38785\n"
+      "Number of documents updated: 38786\n"
      ]
     }
    ],
@@ -543,17 +584,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 173,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x179f2bc49c0>"
+       "<pymongo.results.UpdateResult at 0x179f2a6e7c0>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 174,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
@@ -591,38 +632,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 175,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('65f61257e5e952935a71425a'),\n",
-       " 'FHRSID': 1043695,\n",
+       "{'_id': ObjectId('65f62959ee8fa7e7b92303f3'),\n",
+       " 'FHRSID': 647177,\n",
        " 'ChangesByServerID': 0,\n",
-       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
-       " 'BusinessName': 'The Pavilion',\n",
-       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-       " 'BusinessTypeID': 1,\n",
-       " 'AddressLine1': 'East Cliff Pavilion',\n",
-       " 'AddressLine2': 'Wear Bay Road',\n",
-       " 'AddressLine3': 'Folkestone',\n",
-       " 'AddressLine4': 'Kent',\n",
-       " 'PostCode': 'CT19 6BL',\n",
+       " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
+       " 'BusinessName': 'Wear Bay Bowls Club',\n",
+       " 'BusinessType': 'Pub/bar/nightclub',\n",
+       " 'BusinessTypeID': 7843,\n",
+       " 'AddressLine1': 'Wear Bay Road',\n",
+       " 'AddressLine2': 'Folkestone',\n",
+       " 'AddressLine3': 'Kent',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'CT19 6PY',\n",
        " 'Phone': '',\n",
-       " 'RatingValue': 5,\n",
-       " 'RatingKey': 'fhrs_5_en-gb',\n",
-       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'RatingValue': 4,\n",
+       " 'RatingKey': 'fhrs_4_en-gb',\n",
+       " 'RatingDate': '2014-03-31T00:00:00',\n",
        " 'LocalAuthorityCode': '188',\n",
        " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
        " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
        " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 10},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
+       " 'geocode': {'longitude': 1.196408, 'latitude': 51.086058},\n",
        " 'RightToReply': '',\n",
-       " 'Distance': 4591.765489457773,\n",
+       " 'Distance': 4591.821311183521,\n",
        " 'NewRatingPending': False,\n",
        " 'meta': {'dataSource': None,\n",
        "  'extractDate': '0001-01-01T00:00:00',\n",
@@ -633,10 +674,10 @@
        "  'pageSize': 0,\n",
        "  'pageNumber': 0},\n",
        " 'links': [{'rel': 'self',\n",
-       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/647177'}]}"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
